# LeapMotion

./: .gitignore  CMakeLists.txt  README.md  main.c  main.txt
LeapSDK/: LICENSE.rft  ThirdPartyNotices.md
LeapSDK/include/: LeapC.h
LeapSDK/leapc_cffi/: LeapC.h  _leapc_cffi.cp38-win_amd64.pyd
LeapSDK/lib/cmake/LeapSDK/: leapsdk-configVersion.cmake
LeapSDK/samples/: CMakeLists.txt  DeviceTransformSample.c  ExampleConnection.c  ExampleConnection.h  FiducialTrackingSample.c
